use cached promise

--- a/project-launcher/package.json
+++ b/project-launcher/package.json
@@ -16,7 +16,8 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.39.3"
+    "@raycast/api": "^1.39.3",
+    "@raycast/utils": "^1.4.0"
   },
   "devDependencies": {
     "typescript": "^4.4.3"
